--- a/app/src/main/res/layout/activity_one_player.xml
+++ b/app/src/main/res/layout/activity_one_player.xml
@@ -128,7 +128,7 @@
                 android:id="@+id/rbPreto"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/preto" />
+                android:text="@string/amarelo" />
 
         </RadioGroup>
     </LinearLayout>
